# HKDS

./: CMakeLists.txt  HKDS 2021-01-31.docx  HKDS Specification 2021-05-02.docx  README.md
.github/: SECURITY.md
.github/workflows/: build.yml  codeql-analysis.yml  cppcheck.yml
Documents/: HKDS Specification.docx  hkds_presentation.pptx
Eclipse/MacOS/: .cproject
HKDS/: hkds_config.h  hkds_factory.c  hkds_server.c
HKDS/Documents/: HKDS Summary.docx  HKDS Technical Summary.docx
HKDS/HKDS/: HKDS.suppress  HKDS.vcxproj  HKDS.vcxproj.filters  common.h  doxymain.h  hkds_client.c  hkds_client.h  hkds_config.h  hkds_factory.c  hkds_factory.h  hkds_queue.c  (+9 more)
HKDSTest/: HKDSTest.vcxproj  hkds_test.c
Source/: HKDSTest.sln
docs/: _h_k_d_s_2common_8h_source.html  _h_k_d_s_test_2common_8h_source.html  dir_ebf5a4c8a3c3fa344c772eddcea7e5e2.html  doxygen_crawl.html  doxymain_8h_source.html  files.html  functions.html  functions_vars.html  hkds__factory_8h_source.html  hkds__queue_8h.html  hkds__queue_8h.js  hkds__queue_8h_source.html  hkds__test_8h_source.html  index.html  index.js  keccak_8h_source.html  navtreeindex1.js  structhkds__client__token__request.html  structhkds__error__message.js  structhkds__keccak__state.js  structhkds__master__key.js  structhkds__message__queue__state.html  structhkds__message__queue__state.js  structhkds__queue__state.html  structhkds__queue__state.js  structhkds__server__message__response.js  structhkds__server__state.html  structutils__cpu__features.html  structutils__cpu__features.js  testutils_8h_source.html  timer_8h_source.html
(+268 files in other folders)
